--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.5.2",
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.5.2",
+    "react-reading-progress": "^0.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
   },
